# bessel_symreg

./: LICENSE  README.md  pyproject.toml
bessel_symreg/: .gitignore  README.md
bessel_symreg/examples/: bessel_high_order.ipynb  bessel_ordinal.ipynb  hilbert_transform_method.ipynb
bessel_symreg/examples/mock_analysis/: test_examples_quadratic_gaussian.ipynb
examples/: analysis_PySR_template.ipynb  bessel_spherical.ipynb  hilbert_transform_from_zero.ipynb  hilbert_transform_method.ipynb  neumann_spherical.ipynb
examples/PySR_experiment/: julia_PySR_template.ipynb
examples/bessel_start/: bessel_high_order.ipynb  bessel_ordinal.ipynb  bessel_spherical.ipynb  neumann_spherical.ipynb
examples/hilbert_decomposition_method/: hilbert_transform_from_zero.ipynb
examples/mock_analysis/: hypergeometric_example.ipynb  test_examples_quadratic_gaussian.ipynb
examples/pysr_runs/20250901_162108_JuliaRun/20250901_162111_PeImmx/: hall_of_fame.csv.bak
src/symreg/: __init__.py  main.py
