[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "bessel-symreg"
version = "0.1.0"
authors = [
  { name="Daniel Ctvrtecka", email="dan.ctvrta@email.cz" },
]
description = "A Python package for discovering symbolic models for Bessel functions and related signals using Hilbert transforms and symbolic regression."
readme = "README.md"
requires-python = ">=3.8"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
]


dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "sympy>=1.10",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "scikit-image>=0.19",
    "pyoperon",
    "pysr",
    "optuna",
    "tqdm~=4.62",
    "dill~=0.3.8",
]


[project.urls]
Homepage = "https://github.com/Danyanne/bessel_symreg" 
"Bug Tracker" = "https://github.com/Danyanne/bessel_symreg/issues" 


[project.optional-dependencies]
dev = [
    "matplotlib>=3.5",
    "jupyterlab",
    "ipykernel",
    "rich",
]


[tool.setuptools]
package-dir = {"" = "src"}

